--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ owner: Sebastian Kopf
 description: > # this means to ignore newlines until "baseurl:"
   Stable Isotope Geomicrobiology Lab at the University of Colorado in Boulder
 url: "http://kopflab.com" # the base hostname & protocol for your site
+icon: "/images/cubes_sil.png"
 
 # Build settings
 markdown: kramdown
