--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Stable Isotope Geomicrobiology Lab at the University of Colorado in Boulder
 url: "http://kopflab.com" # the base hostname & protocol for your site
 icon: "/images/cubes_sil.png"
+permalink: /:categories/:title/
 
 # Build settings
 markdown: kramdown
