--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,15 @@
 # Site settings
-title: Kopf Lab
+title: Kopf Lab | CU Boulder
 email: sebastian.kopf@colorado.edu
+phone: +1.303.735.6207
+github: KopfLab
+twitter: kopf_lab
+address: >
+  Univ. of Colorado<br/>
+  Department of Geol. Sciences<br/>
+  2200 Colorado Ave<br/>
+  UCB 399, Rm 285<br/>
+  Boulder, CO 80309-0001
 owner: Sebastian Kopf
 description: > # this means to ignore newlines until "baseurl:"
   Stable Isotope Geomicrobiology Lab at the University of Colorado in Boulder
@@ -14,3 +23,5 @@ markdown: kramdown
 # Sitemap
 gems:
   - jekyll-sitemap
+  - jekyll-gist
+  
