--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Kopf Lab | CU Boulder
+title: Kopf Lab
 email: sebastian.kopf@colorado.edu
 phone: +1.303.735.6207
 github: KopfLab
@@ -10,6 +10,8 @@ address: >
   2200 Colorado Ave<br/>
   UCB 399, Rm 285<br/>
   Boulder, CO 80309-0001
+map_location: 2200 Colorado Ave, Boulder, CO 80309
+map_label: Benson Earth Sciences, Colorado Avenue, Boulder, CO
 owner: Sebastian Kopf
 description: > # this means to ignore newlines until "baseurl:"
   Stable Isotope Geomicrobiology Lab at the University of Colorado in Boulder
@@ -24,4 +26,3 @@ markdown: kramdown
 gems:
   - jekyll-sitemap
   - jekyll-gist
-  
