--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 # Site settings
+owner: Sebastian Kopf
 title: Kopf Lab
 email: sebastian.kopf@colorado.edu
 phone: +1.303.735.6207
@@ -12,12 +13,12 @@ address: >
   Boulder, CO 80309-0001
 map_location: 2200 Colorado Ave, Boulder, CO 80309
 map_label: Benson Earth Sciences, Colorado Avenue, Boulder, CO
-owner: Sebastian Kopf
-description: > # this means to ignore newlines until "baseurl:"
-  Stable Isotope Geomicrobiology Lab at the University of Colorado in Boulder
-url: "http://kopflab.com" # the base hostname & protocol for your site
+description: >
+  Geomicrobial Physiology Lab at the University of Colorado in Boulder
+url: "http://kopflab.com"
 icon: "/images/cubes_sil.png"
 permalink: /:categories/:title/
+front_page_news: 5
 
 # Build settings
 markdown: kramdown
