move people images

--- a/_config.yml
+++ b/_config.yml
@@ -43,3 +43,6 @@ collections:
   people_alumni:
     output: true
     permalink: /people/:path/
+  people_images:
+    output: false
+    permalink: /people/images/:path
