--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ collections:
   teaching:
     output: true
     permalink: /:collection/:path/
+  research:
+    output: true
+    permalink: /:collection/:path/
   people_team:
     output: true
     permalink: /people/:path/
