--- a/_config.yml
+++ b/_config.yml
@@ -59,3 +59,6 @@ collections:
   resources_software:
     output: true
     permalink: /resources/:path/
+  resources_protocols:
+    output: true
+    permalink: /resources/:path/
