create separate category of materials foruser materials

--- a/_config.yml
+++ b/_config.yml
@@ -62,3 +62,6 @@ collections:
   resources_protocols:
     output: true
     permalink: /resources/:path/
+  resources_users:
+    output: true
+    permalink: /:path/
