--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,6 @@ collections:
   resources_protocols:
     output: true
     permalink: /resources/:path/
-  resources_users:
+  resources_internal:
     output: true
     permalink: /:path/
