--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ map_location: 2200 Colorado Ave, Boulder, CO 80309
 map_label: Benson Earth Sciences, Colorado Avenue, Boulder, CO
 description: >
   Geomicrobial Physiology Lab at the University of Colorado in Boulder
-url: "https://kopflab.org"
-urlencode: "https%3A%2F%2Fkopflab.org"
+url: "https://www.kopflab.org"
+urlencode: "https%3A%2F%2Fwww.kopflab.org"
 icon: "/images/header/cubes_sil.png"
 permalink: /:categories/:title/
 front_page_news: 5
