--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: sebastian.kopf@colorado.edu
 phone: +1.303.735.6207
 github: KopfLab
 twitter: kopf_lab
-ga: UA-106138361-7
+ga: G-J5NKSWDWXF
 address: >
   Univ. of Colorado<br/>
   Department of Geol. Sciences<br/>
